Bug 625043: Properly save and restore old clip rect. r=jrmuizel a=blocking-final